Les meta ma salope

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+      <meta name="description" content="Louez votre appartement de luxe à petit prix sur castiprix et laRedoute">
+    <meta property="title" content="Location d'appartements de luxe pas propre" />
+    <meta property="title" content="Location d'appartements de luxe pas propre" />
+    <meta property="og:title" content="Incroyable" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="époustouflan" />
+    <meta property="og:image" content="wow" />
+    <meta property="og:site_name" content="fier d'être en BTS" />
     <title>Air BNB</title>
   </head>
   <body>
